--- a/aws-saml.yaml
+++ b/aws-saml.yaml
@@ -1,6 +1,6 @@
 ﻿AWSTemplateFormatVersion: '2010-09-09'
 Transform: 'AWS::Serverless-2016-10-31'
-Description: This is a demo of a streaming Stack Exchange questions using Streamdata.io, pulling data via the API and turn it into a streaming API using Server-Sent Events, applying incremental updates using JSON Patch, then publishing the stream results to a Amazon S3 data lake.
+Description: This stream Stack Exchange questions using Streamdata.io, pulling data via the API and turning it into a stream and publishing the results to an Amazon S3 data lake
 Resources:
   streamdataiostackexchangequestions:
     Type: 'AWS::Serverless::Function'
@@ -8,9 +8,9 @@ Resources:
       Handler: index.handler
       Runtime: nodejs6.10
       CodeUri: s3://streamdata-serverless/streamdata-io-stack-exchange-questions/package.zip
-      Description: This is a demo of a streaming Stack Exchange questions using Streamdata.io, pulling data via the API and turn it into a streaming API using Server-Sent Events, applying incremental updates using JSON Patch, then publishing the stream results to a Amazon S3 data lake.
+      Description: This stream Stack Exchange questions using Streamdata.io, pulling data via the API and turning it into a stream and publishing the results to an Amazon S3 data lake
       MemorySize: 128
-      Timeout: 30
+      Timeout: 300
       Policies:
         - LambdaInvokePolicy:
             FunctionName: streamdata-io-stack-exchange-questions
